--- a/style.css
+++ b/style.css
@@ -1,49 +1,55 @@
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Source+Sans+Pro:wght@900&display=swap");
 
 * {
-  margin: 0;
-  text-decoration: none;
+    margin: 0;
+    text-decoration: none;
 }
 
 html,
 body {
-  height: 100%;
-  display: grid;
-  place-items: center;
-  background-color: black;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    background: url(images/coding.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
 }
 
 .page-wrapper {
-  display: grid;
-  place-items: center;
-  text-align: center;
+    display: grid;
+    place-items: center;
+    text-align: center;
 }
 
 h1 {
-  color: white;
-  font-family: "Source Sans Pro", sans-serif;
-  font-size: 5em;
-  letter-spacing: -0.04em;
+    color: white;
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 5em;
+    letter-spacing: -0.04em;
 }
 
 p {
-  color: rgb(98, 0, 255);
-  font-family: "Comfortaa", cursive;
-  font-size: 1.5em;
-  margin: 15px 0;
+    color: white;
+    font-family: "Comfortaa", cursive;
+    font-size: 2em;
+    margin: 15px 0;
+    font-weight: bold;
 }
 
 .divider {
-  color: white;
+    color: white;
 }
 
 .icon {
-  color: white;
-  padding: 15px;
-  border-radius: 50%;
+    color: white;
+    padding: 15px;
+    border-radius: 50%;
 }
 
 .icon:hover {
-  cursor: pointer;
-  background-color: rgb(22, 22, 22);
+    cursor: pointer;
+    background-color: rgb(255, 255, 255);
 }
