--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Source+Sans+Pro:wght@900&display=swap");
 
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&family=Permanent+Marker&display=swap');
+
 * {
     margin: 0;
     text-decoration: none;
@@ -26,9 +28,10 @@ body {
 
 h1 {
     color: white;
-    font-family: "Source Sans Pro", sans-serif;
-    font-size: 7em;
-    letter-spacing: -0.04em;
+    font-family: 'Permanent Marker', cursive;
+    font-size: 6.25em;
+    letter-spacing: -0.01em;
+    font-weight: normal;
 }
 
 p {
